[package]
name = "egtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.3.0"
embedded-layout = "0.2.0"
embedded-text = "0.5.0"
genawaiter = "0.99.1"
heapless = { version = "0.7.5", default-features = false, features = ["ufmt-impl"] }
futures = {version = "0.3.21", default-features = false }
spin_on = "0.1.1"
state_machine_future = "0.2.0"
ufmt = "0.1.0"

[patch.crates-io]
embedded-graphics = { path = "../deps/embedded-graphics" }
genawaiter = { path = "../deps/genawaiter" }
state_machine_future = { path = "../deps/state_machine_future" }
