[package]
name = "keepkey-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[lib]
crate-type = ["staticlib"]

[dependencies]
cortex-m = "0.7.7"
cstr_core = { version = "0.2.6", default-features = false }
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
embedded-text = "0.7.0"
heapless = { version = "0.8.0", features = ["ufmt"] }
hex = { version = "0.4.3", default-features = false }
safemem = { version = "0.3.3", default-features = false }
spin = "0.9.8"
stm32f2 = { version = "0.15.1", features = ["stm32f215"] }
synopsys-usb-otg = { version = "0.4.0", features = ["cortex-m", "fs"] }
ufmt = "0.2.0"
usb-device = "0.3.1"
usbd-webusb = { git = "https://github.com/stellar-aria/usbd-webusb" }
